namespace Shortcuts
{
    public static class AnimationKeys
    {
        public const int MAIN_LAYER = 0;
        public const int ATTACK_LAYER = 1;
        public const int BLENDABLE_LAYER = 2;
        
        public const string PRE_BLOCK = "pre_block";
        public const string POST_BLOCK = "post_block";
        public const string BLOCKING = "blocking";
        public const string PRE_ATTACK = "pre_attack";
        public const string ATTACKING = "attacking";
        public const string POST_ATTACK = "post_attack";        

        public const string PARAM_IS_DEFEND = "isDefend";
        public const string PARAM_IS_ATTACK = "isAttack";

        public const string PARAM_CURRENT_SPEED = "CurrentSpeed";
        public const string PARAM_ANIMATION_OCCUPIED = "AnimationOccupied";

        public const string COMBO_1 = "combo 1";
        public const string COMBO_2 = "combo 2";
        public const string COMBO_3 = "combo 3";
        public const string COMBO_4 = "combo 4";
        public const string COMBO_5 = "combo 5";
    }
}